# rusty-psn

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: main.yml  remove-old-artifacts  remove-old-artifacts.yml  rustfmt.yml
libupdates/: Cargo.toml
libupdates/src/: error.rs  lib.rs
resources/: Info.plist
rusty-psn/: Cargo.toml
rusty-psn/src/: error.rs  main.rs
src/: main.rs  utils.rs
src/cli/: mod.rs
src/egui/: mod.rs
src/psn/: manifest_parser.rs  mod.rs  parser.rs  utils.rs
