[package]
name = "rusty-psn"
version = "0.3.8"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
copypasta = "0.10.1"
sha1_smol = "1.0.0"
quick-xml = "0.36.1"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
serde_json = "1.0.128"

log = "0.4.22"
flexi_logger = "0.28.5"

clap = { version = "4.5.13", features = ["derive"] }
crossterm = { version = "0.28.1", optional = true }

reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }

rfd = { version = "0.14.1", optional = true }
eframe = { version = "0.28.1", features = ["persistence"], optional = true }
egui-notify = { version = "0.15.0", optional = true }
notify-rust = { version = "4.11.0", optional = true }

poll-promise = { version = "0.3.0", features = ["tokio"] }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
tokio = { version = "1.39.2", default-features = false, features = ["rt", "io-util", "macros", "fs"] }

[features]
default = ["egui"]
cli = ["crossterm"]
egui = ["rfd", "eframe", "egui-notify", "notify-rust"]
