[package]
name = "rusty-psn"
version = "0.5.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
copypasta = "0.10.1"
sha1_smol = "1.0.1"
quick-xml = "0.37.2"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
serde_json = "1.0.138"

log = "0.4.25"
flexi_logger = "0.29.8"

clap = { version = "4.5.28", features = ["derive"] }
crossterm = { version = "0.28.1", optional = true }

reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }

rfd = { version = "0.15.2", optional = true }
eframe = { version = "0.31.0", features = ["persistence"], optional = true }
egui-notify = { version = "0.19.0", optional = true }
notify-rust = { version = "4.11.4", optional = true }

poll-promise = { version = "0.3.0", features = ["tokio"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
tokio = { version = "1.43.0", default-features = false, features = ["rt", "io-util", "macros", "fs"] }

[features]
default = ["egui"]
cli = ["crossterm"]
egui = ["rfd", "eframe", "egui-notify", "notify-rust"]
