[package]
name = "rusty-psn"
version = "0.5.9"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0.0"
bytesize = "2.0.1"
copypasta = "0.10.2"
sha1_smol = "1.0.1"
quick-xml = "0.38.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
serde_json = "1.0.142"

log = "0.4.27"
flexi_logger = "0.31.2"

clap = { version = "4.5.43", features = ["derive"] }
crossterm = { version = "0.29.0", optional = true }

reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls"] }

rfd = { version = "0.15.4", optional = true }
eframe = { version = "0.32.0", features = ["persistence"], optional = true }
egui-notify = { version = "0.20.0", optional = true }
notify-rust = { version = "4.11.7", optional = true }

poll-promise = { version = "0.3.0", features = ["tokio"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt", "io-util", "macros", "fs"] }

[features]
default = ["egui"]
cli = ["crossterm"]
egui = ["rfd", "eframe", "egui-notify", "notify-rust"]
