[package]
name = "libupdates"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde-xml-rs = "0.5.1"

tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
