[package]
name = "rusty-psn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libupdates = { path = "../libupdates" }

sha1 = "0.6.0"
reqwest = "0.11.4"
crossterm = "0.21.0"
tokio = { version = "1.12.0", default-features = false, features = ["rt", "io-util", "macros", "fs"] }
